--- a/views/inoutcome.ejs
+++ b/views/inoutcome.ejs
@@ -22,6 +22,7 @@
 				<div class="container">
 					<div class="row">
 						<div class="col-sm-6">
+						<!-- Displays object data from the increase array-->
 						<p><b>Balance increase log</b></p>
 							<ul style="list-style-type: none;">
 								<% user.increaseArray.forEach(function(userincreaseArray) { %>
@@ -31,6 +32,7 @@
 						</div>
 
 						<div class="col-sm-6">
+						<!-- Displays object data from the decrease array-->
 						<p><b>Balance decrease log</b></p>
 							<ul style="list-style-type: none;">
 								<% user.decreaseArray.forEach(function(userdecreaseArray) { %>
@@ -42,10 +44,6 @@
 				</div>
 			</div>
 		</div>
-	</div>
-
-	<div class="container text-center">
-		<p><a href="">View your balance history</a></p>
 	</div>
 	
 </div>
