--- a/views/increase.ejs
+++ b/views/increase.ejs
@@ -66,7 +66,7 @@
 								</div>
 								<div class="row form-group input_group">	
 									<div class="col-sm-12">
-										<input type="submit" id="calcSumBtn" class="form-control btn btn-primary" name="calcSum" value="Calculate totals" onclick="calcNumbers()"/>
+										<input type="" id="calcSumBtn" class="form-control btn btn-primary" name="calcSum" value="Calculate totals" onclick="calcNumbers()"/>
 									</div>
 								</div>
 								<div class="row form-group input_group">
